fix: 修复导出时没有导出壁纸和icon文件的问题

--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,12 @@
   "version": "1.0.0",
   "description": "简洁美观的新标签页，快速访问常用网站",
   "permissions": ["storage"],
+  "host_permissions": [
+    "https://www.google.com/*",
+    "https://icons.duckduckgo.com/*",
+    "https://api.allorigins.win/*",
+    "https://*/*"
+  ],
   "chrome_url_overrides": {
     "newtab": "index.html"
   }
