--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - 'v*' # 当推送 v 开头的 tag 时触发，如 v1.0.0
 
+permissions:
+  contents: write # 允许创建 Release 和上传文件
+
 jobs:
   build:
     runs-on: ubuntu-latest
