--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "node scripts/deploy.js"
   },
   "dependencies": {
+    "cropperjs": "^1.6.2",
     "jszip": "^3.10.1",
     "vue": "^3.5.24"
   },
